--- a/events.css
+++ b/events.css
@@ -45,7 +45,7 @@ body{
 p{
     font-size: 100%;
 }
-
+/* 
 
 nav ul{
     display: flex;
@@ -77,7 +77,173 @@ margin-top: 10%;
     margin-bottom:30% ;
     padding: 10%;
     
-}
+} */
+
+
+
+.navigationbar{
+    position: absolute;
+     top: 85%;
+     left: 27%;
+     padding: 0.7%;
+    background-color: black;
+    margin-left: 0px;
+    padding-left: 0px;
+    width: 37%;
+    border-radius: 3em;
+    font-size: 1.2em;
+    box-shadow: 0 4px 8px 0 rgba(31, 30, 30, 0.2), 0 6px 20px 0 rgba(36, 35, 35, 0.19);
+    overflow: visible;
+   
+    
+
+  
+  }
+  .navbar{
+    list-style: none;
+    display: flex;
+    gap: 3%;
+    color:#fff;
+  }
+  
+  .navigationbar a{
+    text-decoration: none;
+    color: white;
+  }
+  .navigationbar a:hover{
+    color: orange;
+  }
+
+  .popup{
+    display: none;
+    position: absolute;
+    bottom: 90px;
+    top: auto;
+    left: 20px;
+    background-color: white;
+    color: black;
+    padding: 10px;
+    border-radius: 10px;
+    width: 250px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+    z-index: 999;
+    font-size: 0.9em;
+  }
+  
+  .clockIcon:hover .popup{
+    display: block;
+  }
+
+  .food{
+    position: relative;
+  }
+  .menu{
+    position: relative;
+    display: inline-block;
+    background-color: transparent;
+  }
+  .menuIcon{
+    color: white;
+    cursor: pointer;
+    text-decoration: none;
+    padding: 10px;
+  }
+   .clickMenu{
+    display: none;
+    position: absolute;
+    bottom: 100%;
+    left: -20px;
+    background-color: black;
+    padding: 15px;
+    border-radius: 10px;
+    z-index: 1000;
+    width: 250px;
+   }
+
+   .menu:hover .clickMenu{
+    display: block;
+   }
+
+   .clickMenu a{
+    color: white;
+    text-decoration: none;
+    display: block;
+    padding: 10px 0px;
+
+   }
+
+   .clickMenu hr{
+    border: 0;
+    border-top: 1px solid #555;
+    margin: 0;
+   }
+   #reservationsLink{
+    background-color: grey;
+    padding: 5%;
+    border-radius: 1em;
+    text-align: center;
+    width: 100%; 
+    margin-top: -5%;      
+
+  }
+
+
+#whatssapIcon{
+    position: absolute;
+    font-size: 30px;
+    top: 85%;
+    left: 93%;
+    
+    background-color: black;
+    border: white 1px solid;
+    border-radius: 2em;
+    padding: 1%;
+    }
+  
+ 
+.socialIcons{
+    position:absolute;
+    left: 93%;
+    bottom: 95%;
+    display: flex;
+    gap:50%;
+  
+    }
+  
+
+
+  #instagramIcon{
+    font-size: 20px;
+    filter: brightness(60%);
+    
+  
+  }
+
+  .instagram{
+    border: solid 1px white;
+    width: 100%;
+    padding: 20%;
+    border-radius: 3em;
+    filter: brightness(60%);
+  }
+  
+  .facebook{
+    border: solid 1px white;
+    width: 100%;
+    padding: 20%;
+    border-radius: 2em;
+    filter: brightness(60%);
+   justify-content: center;
+  }
+
+
+
+  
+ 
+
+
+
+
 
 
 
