--- a/menu.css
+++ b/menu.css
@@ -65,7 +65,7 @@
         overflow-y: hidden;
     }
 
-
+/* 
     nav ul{
         display: flex;
         position: fixed;
@@ -98,128 +98,284 @@
         
     }
 
+     */
+
+     .navigationbar{
+        position: absolute;
+         top: 85%;
+         left: 27%;
+         padding: 0.7%;
+        background-color: black;
+        margin-left: 0px;
+        padding-left: 0px;
+        width: 37%;
+        border-radius: 3em;
+        font-size: 1.2em;
+        overflow: visible;
+       
+        
+    
+      
+      }
+      .navbar{
+        list-style: none;
+        display: flex;
+        gap: 3%;
+        color:#fff;
+      }
+      
+      .navigationbar a{
+        text-decoration: none;
+        color: white;
+      }
+      .navigationbar a:hover{
+        color: orange;
+      }
+    
+      .popup{
+        display: none;
+        position: absolute;
+        bottom: 90px;
+        top: auto;
+        left: 20px;
+        background-color: white;
+        color: black;
+        padding: 10px;
+        border-radius: 10px;
+        width: 250px;
+        box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+        z-index: 999;
+        font-size: 0.9em;
+      }
+      
+      .clockIcon:hover .popup{
+        display: flexbox;
+      }
+    
+      .food{
+        position: relative;
+      }
+      .menu{
+        position: relative;
+        display: inline-block;
+        background-color: transparent;
+      }
+      .menuIcon{
+        color: white;
+        cursor: pointer;
+        text-decoration: none;
+        padding: 10px;
+      }
+       .clickMenu{
+        display: none;
+        position: absolute;
+        bottom: 100%;
+        left: -20px;
+        background-color: black;
+        padding: 15px;
+        border-radius: 10px;
+        z-index: 1000;
+        width: 250px;
+       }
+    
+       .menu:hover .clickMenu{
+        display: block;
+       }
+    
+       .clickMenu a{
+        color: white;
+        text-decoration: none;
+        display: block;
+        padding: 10px 0px;
+    
+       }
+    
+       .clickMenu hr{
+        border: 0;
+        border-top: 1px solid #555;
+        margin: 0;
+       }
+       #reservationsLink{
+        background-color: grey;
+        padding: 5%;
+        border-radius: 1em;
+        text-align: center;
+        width: 100%; 
+        margin-top: -5%;      
+    
+      }
+    
+    
+    #whatssapIcon{
+        position: absolute;
+        font-size: 30px;
+        top: 85%;
+        left: 93%;
+        
+        background-color: black;
+        border: white 1px solid;
+        border-radius: 2em;
+        padding: 1%;
+        }
+      
+     
+    .socialIcons{
+        position:absolute;
+        left: 93%;
+        bottom: 95%;
+        display: flex;
+        gap:50%;
+      
+        }
+      
+    
+    
+      #instagramIcon{
+        font-size: 20px;
+        filter: brightness(60%);
+        
+      
+      }
+    
+      .instagram{
+        border: solid 1px white;
+        width: 100%;
+        padding: 20%;
+        border-radius: 3em;
+        filter: brightness(60%);
+      }
+      
+      .facebook{
+        border: solid 1px white;
+        width: 100%;
+        padding: 20%;
+        border-radius: 2em;
+        filter: brightness(60%);
+       justify-content: center;
+      }
+    
+    
     
     
     
 
+    
+   
 
 @media only screen and (max-width:600px){
-    
-
-    
-    .kilimani-branch{
-    
-        background-image:url(images/nightview.jpg);
-        background-repeat: no-repeat;
-        background-size: cover;
-        height: 1000px;
-        text-align: center;
-        width: 1000px;
-    
-    }
-    
-    
-    .branches{
-        display: block;
-        justify-content: center;
-        flex-wrap: wrap;
-        
-    }
-    
-    
-    h1{
-        color: white;
-        margin-top:5cm;
-    }
-    
-    h2{
-        color: orangered;
-        position: relative;
-        top:170px;
-        
-    }
-    .logo{
-    position: absolute;
-    overflow: visible;
-    margin-left: -0.4cm;
-    padding: 20px;
-    padding-top: 21px;
-
-    }
-
-    #img-links{
-        text-decoration: none;
-        position: relative;
-        color: white;
-        bottom: 10px;
-    }
-    
-    .kitisuru-branch{
-        background-size: cover;
-        width: 1000px;
-        height: 1000px;
-        text-align: center;
-        word-spacing: 2px;
-        background-repeat: no-repeat;
-    background-image: url(images/frontview.jpg);
-    }
-    
-    .branches{
-        display: flex;
-    }
-
-    body{
-        overflow-x: hidden;
-        margin: 0;
-        overflow-y: hidden;
-    }
 
 
-    nav ul{
-        display: block;
-        position: fixed;
-        gap: 1cm;
-        border: 1px solid black;
-        list-style: none;
-        background-color: black;
-        color: aliceblue;
-        width: -6%;
-        border-radius: 40px;
-        padding: 2%;
-        justify-content: center;
-        margin-top: -5cm;
-        margin-left: 28%;
-        margin-right: 10%;
-       
-    }
-    
-    nav a{
-    list-style: none;
-    text-decoration: none;
-    color: aliceblue;
-    margin-top: 5cm;
-    
-    }
-    .navigationbar{
-        margin-top: -5cm;
-        margin-left: -10%;
-        padding: 20px;
-        margin-bottom:20% ;
-      
-        
-    }
-    
-    
-    #bullimage{
-        width: 45%;
-        margin-left: 26%;
-    }
+#bullimage{
+  width: 30px;
+  top:80px;
+}
+
+
+
+.logo{
+  margin-left: 80px;
+  top: 300px;
   
+  }
+
+
+
+  h1{
+
+    font-size: 10px;
+    color: blue;
+    margin-bottom:300px;
+    /* top: 400cm; */
+    /* top: -50px; */
+}
+
+h2{
+    font-size: 10px;
+    color: orange;
+    top: -300px;
+
     
+}
+
+
+
+
+#img-links{
+   font-size: 10px;
+   color:yellow;
+   top: -599px;
+}
+
+
+
+.navigationbar{
     
+  top: 60%;
+  left: -0.05%;
+  padding: 0.5%;
+ width: 50%;
+ font-size: 0.2em;
+
+}
 
 
 
+.navbar{
+gap: 0.05%;
+
+}
+
+
+.kitisuru-branch{
+  background-size: cover;
+  width: 65%;
+  height: 20%;
+  text-align: center;
+  word-spacing: 2px;
+  background-repeat: no-repeat;
+background-image: url(images/frontview.jpg);
+}
+
+
+.kilimani-branch{
+    
+  background-image:url(images/nightview.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 20%;
+  text-align: center;
+  width: 65%;
+
+}
+
+
+
+.branches{
+ 
+  flex-direction: column;
+  height: 100vh;
+  width: 100vw;
+
+  
+}
+
+
+    
+#whatssapIcon{
+  position: absolute;
+  font-size: 30px;
+  top: 60%;
+  left: 40%;
+  
+  background-color: black;
+  border: white 1px solid;
+  border-radius: 2em;
+  padding: 1%;
+  }
+
+  .kitisuru-branch h1{
+    top: 60%;
+  }
 
 
 }
